fix 1.Component.toTextComponent的部分问题
(cherry picked from commit cc2ecbaa53d2157a7cbea17e1d18e8ccff53e5e0)